[package]
name = "ak-inflate2"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>", "Ulf Lilleengen <ulf@digili.no>"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[features]
std = []

default = ["std"]

[dependencies]
embedded-io-async = "0.7"

[dev-dependencies]
futures-test = "0.3.3"
flate2 = { version = "1.1.1", features = ["zlib-rs"] }
hex-literal = "0.3.3"
hex = "0.4.3"
